@@ -4,6 +4,7 @@
 <li>Added libspoton_delete_urls() to libspoton. Version updated to 0.10.</li>
 <li>Allow configuration of alternating row colors of Chat, E-Mail, and URLs participants. Please see Options.</li>
 <li>Allow configuration of the kernel's cache purge timer.</li>
+<li>Allow importing of URLs without Import Credentials. Only plaintext URLs will be imported.</li>
 <li>Assume zero pointer defaults in Qt::value().</li>
 <li>Custom status messages. A maximum of 64 characters will be imposed.</li>
 <li>Denote extreme time deltas in Chat. Currently configured to thirty seconds. Source only.</li>
